--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="col">
           <div class="chat">
             <div class="row window info">
-              <h3 id="headline" style='text-align:center; width:100%;'>Global Chat</h3> 
+              <h3 id="headline" style='text-align:center; width:100%;'>Chat</h3> 
             </div>               
             <div class="row window moves-history">
               <div id="showTyping"></div>
